@@ -36,6 +36,7 @@ public class InterfaceFilter
         {
         if(params.size() != 0)
             throw new FilterSyntaxException(
+                this,
                 options.get("filter") + " expects no parameters, but has " + params.size());
         return INTERFACE_PATTERN;
         }
