@@ -37,6 +37,7 @@ public class PrimitiveFilter
         {
         if(params.size() != 0)
             throw new FilterSyntaxException(
+                this,
                 options.get("filter") + " expects no parameters, but has " + params.size());
         return PRIMITIVE_PATTERN;
         } 
